--- a/.circleci/devcluster/multi-k8s.devcluster.yaml
+++ b/.circleci/devcluster/multi-k8s.devcluster.yaml
@@ -32,7 +32,7 @@ stages:
         resource_manager:
           type: kubernetes
           name: default
-          namespace: default
+          default_namespace: default
           max_slots_per_pod: 1
           slot_type: "cpu"
           slot_resource_requests:
@@ -52,7 +52,7 @@ stages:
         - resource_manager:
             type: kubernetes
             name: additionalrm
-            namespace: default
+            default_namespace: default
             max_slots_per_pod: 1
             slot_type: "cpu"
             slot_resource_requests:
