feat: remove rp-ns binding and add wksp-ns binding

--- a/.circleci/devcluster/multi-k8s.devcluster.yaml
+++ b/.circleci/devcluster/multi-k8s.devcluster.yaml
@@ -30,7 +30,7 @@ stages:
         resource_manager:
           type: kubernetes
           name: default
-          namespace: default
+          default_namespace: default
           max_slots_per_pod: 1
           slot_type: "cpu"
           slot_resource_requests:
@@ -50,7 +50,7 @@ stages:
         - resource_manager:
             type: kubernetes
             name: additionalrm
-            namespace: default
+            default_namespace: default
             max_slots_per_pod: 1
             slot_type: "cpu"
             slot_resource_requests:
