feat: implement commands and API endpoints for creating workspace-namespace bindings (#9226)

--- a/master/.mockery.yaml
+++ b/master/.mockery.yaml
@@ -92,6 +92,14 @@ packages:
         config:
           filename: k8s_corev1_iface.go
           mockname: K8sCoreV1Interface
+      NamespaceInterface:
+        config:
+          filename: namespace_iface.go
+          mockname: NamespaceInterface
+      ConfigMapInterface:
+        config:
+          filename: configmap_iface.go
+          mockname: ConfigMapInterface
   k8s.io/client-go/kubernetes/typed/batch/v1:
     interfaces:
       JobInterface:
