feat: implement commands and API endpoints for creating workspace-namespace bindings (#9226)

--- a/.circleci/devcluster/multi-k8s.devcluster.yaml
+++ b/.circleci/devcluster/multi-k8s.devcluster.yaml
@@ -32,6 +32,7 @@ stages:
         resource_manager:
           type: kubernetes
           name: default
+          cluster_name: defaultrm
           default_namespace: default
           max_slots_per_pod: 1
           slot_type: "cpu"
@@ -52,6 +53,7 @@ stages:
         - resource_manager:
             type: kubernetes
             name: additionalrm
+            cluster_name: additionalrm
             default_namespace: default
             max_slots_per_pod: 1
             slot_type: "cpu"
