chore: remove bumpversion for setup.py and __version__.py [INFENG-704] (#9442)
INFENG-704: Remove bumpversion

* Update determined Python package to fetch its own version dynamically
  from package metadata using importlib.metadata, which seems to be the
  canonical way to fetch the version string at runtime. In lieu of
  something more complicated, I assigned a module-level __version__
  variable in __init__.py to avoid touching the rest of the package code
  that relies on this behavior.

* Migrate all of the setup.py options into the existing pyproject.toml,
  except options that are no longer necessary, leaving the
  long_description in because pyproject.toml seems to be unable to
  reference README files above the pyproject.toml root.

* Remove harness/determined/__version__.py and
  model_hub/model_hub/__version__.py, as they are no longer
  necessary. The __version__ dunder is now provided by __init__.py. See
  PEP-396 <https://peps.python.org/pep-0396/> for more information about
  why this is no longer desirable.

* Add explicit dependencies on setuptools>=64 and setuptools_scm>=8 in
  harness/pyproject.toml and model_hub/pyproject.toml to allow tagging
  versions dynamically from git.

* Add setuptools==70.0.0 and setuptools-scm==8.1.0 as dependencies to
  support setuptools dynamically using git tag information.

* Set build-backend to setuptools.build_meta to use setuptools_scm.

* Move all setuptools.setup() args into pyproject.toml, because newer
  version of setuptools, if I understand correctly, have support for
  them.

* Remove bumpversion config for setup.py and __version__.py.

--- a/requirements.txt
+++ b/requirements.txt
@@ -29,6 +29,8 @@ pyzmq>=23.2.1
 devcluster>=1,<2
 coverage
 sqlfluff==2.1.4
+setuptools==70.0.0
+setuptools-scm==8.1.0
 # typeshed
 types-certifi
 types-chardet
