chore: cleanup auto-created namespaces during workspace deletion (#9329)

--- a/helm/charts/determined/templates/master-deployment.yaml
+++ b/helm/charts/determined/templates/master-deployment.yaml
@@ -16,6 +16,7 @@ spec:
       labels:
         app: determined-master-{{ .Release.Name }}
         determined-system: master
+        release-namespace: {{ .Release.Namespace }}
       annotations:
         # This is added so that the master deployment restarts when an upgrade occurs that
         # changes the master-config.yaml.
@@ -36,9 +37,13 @@ spec:
         {{- end -}}
         image: {{ .Values.imageRegistry }}/{{ $image }}:{{ $tag }}
         imagePullPolicy: "Always"
+        env:
+          - name: DET_RELEASE_NAMESPACE
+            valueFrom:
+              fieldRef:
+                fieldPath: metadata.namespace
         {{- if .Values.enterpriseEdition }}
         {{- if .Values.oidc }}
-        env:
           - name: DET_OIDC_CLIENT_SECRET
             valueFrom:
               secretKeyRef:
