--- a/helm/charts/determined/templates/master-config.yaml
+++ b/helm/charts/determined/templates/master-config.yaml
@@ -175,7 +175,9 @@ stringData:
 
     resource_manager:
       type: "kubernetes"
-      default_namespace: {{ .Release.Namespace }}
+      {{- if .Values.defaultNamespace }}
+      default_namespace: {{ .Values.defaultNamespace }}
+      {{- end }}
       max_slots_per_pod: {{ required "A valid Values.maxSlotsPerPod entry is required!" .Values.maxSlotsPerPod }}
       master_service_name: determined-master-service-{{ .Release.Name }}
       {{- if .Values.defaultScheduler}}
