build: INFENG-726: generate versions.json for docs version switcher (#9515)
INFENG-726: Generate versions.json from git tags

This changeset introduces a new Python script, docs/gen-versions.py, to
generate the existing versions.json file from git tags, while
maintaining the previous structure of the file and incorporating new
tags as they get created.

My initial thought was to use the existing versions.json file as a
template, and then append subsequent entries to it from new git tags as
they get created and pushed. This felt brittle, though, and very special
case-y.

Instead, I use the GitPython version of git-rev-list to walk the DAG
from all tags back to right before 0.21.0. I then filter out all tags
that aren't a major, minor, or patch release, and exclude versions that
have tags, but without corresponding entries in the original
versions.json file. This gives us all relevant doc tags between now and
0.21.0 (inclusive), which we can use to generate versions.json. It also
works for any new tags we use going forward.

The resultant file still winds up where it normally would, and should
get packaged and released like it would if it were stored in git on disk.

The summary of changes is as follows:

* Add gen-versions.py, which generates versions.json from git tags.

* Add a new docs/Makefile target, gen-versions, to run gen-versions.py
  as part of the docs build process.

* Remove versions.json from .bumpversion.cfg.

* Remove versions.json.

--- a/docs/Makefile
+++ b/docs/Makefile
@@ -52,8 +52,17 @@ build/swagger.stamp: ../proto/build/swagger/determined/api/v1/api.swagger.json s
 	mkdir -p build
 	touch $@
 
+.PHONY: gen-versions
+# 0.21.0 is the epoch for tag versions, because that's as far back as our public
+# docs go. `git merge-base 0.21.0 main` gets the most recent common ancestor
+# between 0.21.0 and main, and then we rev-parse COMMIT~1 to get the commit
+# right before to avoid boundary conditions.
+gen-versions: ANCESTOR=$(shell git rev-parse $(shell git merge-base 0.21.0 main)~1)
+gen-versions:
+	python3 gen-versions.py $(ANCESTOR) -o _static/version-switcher/versions.json
+
 .PHONY: build
-build: build/sp-html.stamp
+build: gen-versions build/sp-html.stamp
 
 .PHONY: xml
 xml: build/sp-xml.stamp
