--- a/.circleci/real_config.yml
+++ b/.circleci/real_config.yml
@@ -1511,6 +1511,20 @@ jobs:
       - store_artifacts:
           path: helm/build
 
+  retag-docker-images:
+    docker:
+      - image: <<pipeline.parameters.docker-image>>
+    steps:
+      - checkout
+      - setup-python-venv:
+          install-python: false
+          determined: false
+          model-hub: false
+          extra-requirements-file: "docs/requirements.txt"
+          executor: <<pipeline.parameters.docker-image>>
+      - run: pip install python_on_whales
+      - run: python3 tools/scripts/update-docker-tags.py tools/scripts/bumpenvs.yaml
+
   build-docs:
     parameters:
       ee:
@@ -5627,6 +5641,9 @@ workflows:
             - build-docs
           context: determined-production
           filters: *rc-filters
+
+      - retag-docker-images:
+          filters: *release-and-rc-filters
 
       - publish-python-package:
           name: publish-python-package-rc
