--- a/helm/charts/determined/templates/master-permissions.yaml
+++ b/helm/charts/determined/templates/master-permissions.yaml
@@ -18,7 +18,7 @@ metadata:
      release: {{ .Release.Name }}
 rules:
   - apiGroups: [""]
-    resources: ["pods", "pods/status", "pods/log", "configmaps"]
+    resources: ["pods", "pods/status", "pods/log", "configmaps", "namespaces"]
     verbs: ["create", "get", "list", "delete"]
   - apiGroups: [""]
     resources: ["services", "resourcequotas"]
