--- a/master/.mockery.yaml
+++ b/master/.mockery.yaml
@@ -100,6 +100,10 @@ packages:
         config:
           filename: configmap_iface.go
           mockname: ConfigMapInterface
+      ResourceQuotaInterface:
+        config:
+          filename: resource_quota_iface.go
+          mockname: ResourceQuotaInterface
   k8s.io/client-go/kubernetes/typed/batch/v1:
     interfaces:
       JobInterface:
