--- a/.circleci/real_config.yml
+++ b/.circleci/real_config.yml
@@ -5658,10 +5658,7 @@ workflows:
           filters: *rc-filters
 
       - retag-docker-images:
-          parameters:
-          matrix:
-            parameters:
-              release: [true]
+          release: true
           filters: *release-filters
 
       - publish-python-package:
