--- a/.circleci/real_config.yml
+++ b/.circleci/real_config.yml
@@ -631,8 +631,8 @@ commands:
                   DD_ENV=ci \
                   DD_LOGS_ENABLED=true \
                   bash -c "$(curl -L https://s3.amazonaws.com/dd-agent/scripts/install_script_agent7.sh)"
-                  cat /etc/datadog-agent/datadog.yaml
-                  ls /etc/datadog-agent/conf.d/
+                  sudo cat /etc/datadog-agent/datadog.yaml
+                  sudo ls /etc/datadog-agent/conf.d/
       # Wait for master before splitting tests, since so many splits depend on
       # asking master for its configuration in order to apply skipifs.
       - when:
