--- a/.circleci/real_config.yml
+++ b/.circleci/real_config.yml
@@ -628,7 +628,7 @@ commands:
                 name: Install DataDog agent
                 command: |
                   bash -c "$(curl -L https://s3.amazonaws.com/dd-agent/scripts/install_script_agent7.sh)"
-                  cat .circleci/datadog/ci-local-config.yaml >> /etc/datadog-agent/datadog.yaml
+                  sudo cat .circleci/datadog/ci-local-config.yaml >> /etc/datadog-agent/datadog.yaml
                   sudo service datadog-agent restart
                   sudo cat /etc/datadog-agent/datadog.yaml
                   sudo ls /etc/datadog-agent/conf.d/
