--- a/.circleci/real_config.yml
+++ b/.circleci/real_config.yml
@@ -632,7 +632,7 @@ commands:
             - run:
                 name: Install DataDog agent
                 command: |
-                  mkdir -p /etc/datadog-agent
+                  sudo mkdir -p /etc/datadog-agent
                   sudo chmod -R a+rw /etc/datadog-agent
                   sudo cat .circleci/datadog/ci-local-config.yaml >> /etc/datadog-agent/datadog.yaml
                   DD_ENV="ci-${CIRCLE_BUILD_NUM}" \
