--- a/.circleci/real_config.yml
+++ b/.circleci/real_config.yml
@@ -627,13 +627,12 @@ commands:
             - run:
                 name: Install DataDog agent
                 command: |
-                  sudo mkdir -p /etc/datadog-agent
-                  sudo chmod -R a+rw /etc/datadog-agent
                   host_tags=testSuite:<<parameters.mark>>,jobName:${CIRCLE_JOB},totalNodes:${CIRCLE_NODE_TOTAL},nodeIdx:${CIRCLE_NODE_INDEX}
                   echo "$host_tags"
                   DD_ENV="ci-${CIRCLE_BUILD_NUM}" \
                   DD_HOST_TAGS="$host_tags" \
                   bash -c "$(curl -L https://s3.amazonaws.com/dd-agent/scripts/install_script_agent7.sh)"
+                  sudo chmod -R a+rw /etc/datadog-agent/datadog.yaml
                   sudo cat .circleci/datadog/ci-local-config.yaml >> /etc/datadog-agent/datadog.yaml
                   sudo usermod -a -G docker dd-agent
                   sudo service datadog-agent restart
