--- a/.circleci/real_config.yml
+++ b/.circleci/real_config.yml
@@ -632,9 +632,20 @@ commands:
             - run:
                 name: Install DataDog agent
                 command: |
-                  host_tags=testSuite:<<parameters.mark>>,jobName:${CIRCLE_JOB},totalNodes:${CIRCLE_NODE_TOTAL},nodeIdx:${CIRCLE_NODE_INDEX}
+                  host_tags=testSuite:<<parameters.mark>>,\
+                  pipeline:${CIRCLE_PIPELINE_ID},\
+                  workflow:${CIRCLE_WORKFLOW_ID},\
+                  job:${CIRCLE_BUILD_NUM},\
+                  user:${CIRCLE_USERNAME},\
+                  tag:${CIRCLE_TAG},\
+                  commit:${CIRCLE_SHA1},\
+                  totalNodes:${CIRCLE_NODE_TOTAL},\
+                  nodeIdx:${CIRCLE_NODE_INDEX},\
+                  repo:${CIRCLE_PROJECT_REPONAME},\
+                  pr:${CIRCLE_PR_NUMBER}
+                  
                   echo "$host_tags"
-                  DD_ENV="ci-${CIRCLE_BUILD_NUM}" \
+                  DD_ENV="ci-${CIRCLE_JOB}" \
                   DD_HOST_TAGS="$host_tags" \
                   bash -c "$(curl -L https://s3.amazonaws.com/dd-agent/scripts/install_script_agent7.sh)"
                   sudo chmod -R a+rw /etc/datadog-agent/datadog.yaml
