--- a/.circleci/real_config.yml
+++ b/.circleci/real_config.yml
@@ -651,6 +651,7 @@ commands:
                   # config files for the agent have an expected file structure
                   sudo mkdir -p /etc/datadog-agent/determined-master.d/
                   sudo chmod -R a+rw /etc/datadog-agent/datadog.yaml
+                  sudo chmod -R a+rw /etc/datadog-agent/determined-master.d/
                   sudo cat .circleci/datadog/ci-local-config.yaml >> /etc/datadog-agent/datadog.yaml
                   sudo cat .circleci/datadog/e2e-log-settings.yaml > /etc/datadog-agent/determined-master.d/conf.yaml
                   sudo usermod -a -G docker dd-agent
