--- a/master/.golangci.yml
+++ b/master/.golangci.yml
@@ -263,7 +263,7 @@ linters:
     # - exportloopref    # Language changed.
     # - intrange         # Buggy, panic with this on Go 1.22.
 
-    # # Linters that are deprecated / replaced / removed.
+    # Linters that are deprecated / replaced / removed.
     # - nosnakecase      # Replaced by revive(var-naming).
     # - ifshort          # The repository of the linter has been deprecated by the owner.
     # - interfacer       # Linter archived since it can give bad suggestions.
