--- a/.circleci/real_config.yml
+++ b/.circleci/real_config.yml
@@ -651,8 +651,8 @@ commands:
                   sudo cat .circleci/datadog/e2e-log-settings.yaml > /etc/datadog-agent/determined-master.d/conf.yaml
                   sudo usermod -a -G docker dd-agent
                   sudo service datadog-agent restart
-                  sudo cat /etc/datadog-agent/datadog.yaml
-                  sudo ls /etc/datadog-agent/conf.d/
+                  sudo datadog-agent status
+                  sudo service datadog-agent status
       # Wait for master before splitting tests, since so many splits depend on
       # asking master for its configuration in order to apply skipifs.
       - when:
@@ -735,6 +735,15 @@ commands:
                 master_address: "<<parameters.master-scheme>>://<<parameters.master-host>>:<<parameters.master-port>>"
       - store_artifacts:
           path: /tmp/artifacts/logs
+      - when:
+          condition: <<parameters.collect-det-job-logs>>
+          steps:
+            - run:
+                name: Check Datadog agent status
+                command: |
+                  sudo datadog-agent status
+                  sudo service datadog-agent status
+
 
   run-det-deploy-tests:
     parameters:
