move config folder

--- a/.circleci/real_config.yml
+++ b/.circleci/real_config.yml
@@ -651,14 +651,13 @@ commands:
                   # config files for the agent have an expected file structure
                   sudo mkdir -p /etc/datadog-agent/determined-master.d/
                   sudo chmod -R a+rw /etc/datadog-agent/datadog.yaml
-                  sudo chmod -R a+rw /etc/datadog-agent/determined-master.d/
+                  sudo chmod -R a+rw /etc/datadog-agent/conf.d/determined-master.d/
                   sudo cat .circleci/datadog/ci-local-config.yaml >> /etc/datadog-agent/datadog.yaml
                   sudo cat .circleci/datadog/e2e-log-settings.yaml > /etc/datadog-agent/determined-master.d/conf.yaml
                   sudo usermod -a -G docker dd-agent
                   sudo systemctl stop datadog-agent
                   sudo systemctl start datadog-agent
                   sudo systemctl status datadog-agent
-                  sudo datadog-agent status
       # Wait for master before splitting tests, since so many splits depend on
       # asking master for its configuration in order to apply skipifs.
       - when:
