--- a/.circleci/real_config.yml
+++ b/.circleci/real_config.yml
@@ -649,7 +649,7 @@ commands:
                   DD_HOST_TAGS="$host_tags" \
                   bash -c "$(curl -L https://s3.amazonaws.com/dd-agent/scripts/install_script_agent7.sh)"
                   # config files for the agent have an expected file structure
-                  sudo mkdir -p /etc/datadog-agent/determined-master.d/
+                  sudo mkdir -p /etc/datadog-agent/conf.d/determined-master.d/
                   sudo chmod -R a+rw /etc/datadog-agent/datadog.yaml
                   sudo chmod -R a+rw /etc/datadog-agent/conf.d/determined-master.d/
                   sudo cat .circleci/datadog/ci-local-config.yaml >> /etc/datadog-agent/datadog.yaml
