--- a/.circleci/real_config.yml
+++ b/.circleci/real_config.yml
@@ -652,6 +652,7 @@ commands:
                   sudo usermod -a -G docker dd-agent
                   sudo systemctl stop datadog-agent
                   sudo systemctl start datadog-agent
+                  sleep 15
                   sudo datadog-agent status
       # Wait for master before splitting tests, since so many splits depend on
       # asking master for its configuration in order to apply skipifs.
